--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,11 +1,6 @@
 name: Android CI
 
-on:
-  workflow_dispatch:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [ workflow_dispatch, push, pull_request ]
 
 jobs:
   build:
